--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -24,7 +24,7 @@ en: &DEFAULT_EN
       - title: Public Data Analysis
         desc: We help organizations collect, analyze, and visualize public data to gain insights and make informed decisions. Our data analysis services include data collection, cleaning, transformation, and visualization.
         icon: fas fa-magnifying-glass-chart
-      - title: "Web Application Development"
+      - title: "Application Development"
         desc: "We specialize in building robust backend systems that power your applications. Our team of experienced developers utilizes the latest technologies to create scalable, secure, and high-performance backend solutions, ensuring seamless integration with your frontend interfaces."
         icon: fas fa-code #find more at https://fontawesome.com/icons
       - title: "Devops Services"
@@ -35,13 +35,13 @@ en: &DEFAULT_EN
   about:
     title: "About Us"
     text: ""
-    body: "At Datam Labs, we are a team of dedicated professionals passionate about technology and innovation. Founded in 2024, we specialize in providing top-notch Open data, Web application development, DevOps services. Our mission is to empower organizations to achieve their goals through advanced technology and seamless integration. We believe in the concept of bartering(oldest form of commerce) where everyone involved has something to gain. We are committed to providing the best services to our clients and partners, ensuring that they achieve their desired outcomes. We are always looking for new opportunities to collaborate with like-minded individuals and organizations. If you are interested in working with us, please get in touch."
+    body: "At Datam Labs, we are a team of dedicated professionals passionate about technology and innovation. Founded in 2024, we specialize in providing top-notch Open data, Web application development, DevOps services. Our mission is to empower organizations to achieve their goals through advanced technology and seamless integration.\n\n We believe in the concept of bartering(oldest form of commerce) where everyone involved has something to gain.We are committed to providing the best services to our clients and partners, ensuring that they achieve their desired outcomes. We are always looking for new opportunities to collaborate with like-minded individuals and organizations. If you are interested in working with us, please get in touch."
     section: about
 
   clients:
     section: clients
     max-height: 100px
-    horizontal-scrolling: "yes"
+    horizontal-scrolling: ""
     list:
       - title: "chartr"
         url: https://chartr.in/
@@ -60,7 +60,7 @@ en: &DEFAULT_EN
     legal: "Privacy Policy"
     social:
       - url: mailto:contact@dattam.in 
-        icon: "fa fa-envelope"
+        icon: "fab fa-envelope"
       - url: https://www.linkedin.com/company/dattam-in
         icon: "fab fa-linkedin-in"
       - url: https://github.com/dattam-in
